feat: add deployment resources

--- a/.helm/templates/deployment.yaml
+++ b/.helm/templates/deployment.yaml
@@ -25,7 +25,7 @@ spec:
             - name: MONGO_URI
               value: "{{ .Values.mongodb.uri }}"
             - name: MONGO_DB_NAME
-              value: "{{ .Values.mongodb.dbName._default }}"
+              value: '{{ eq .Values.werf.env "staging" | ternary .Values.mongodb.dbName.staging .Values.mongodb.dbName._default }}'
             - name: REDIS_URI
               value: "redis://{{ .Release.Name }}-redis-master"
           ports:
